--- a/style.css
+++ b/style.css
@@ -566,6 +566,7 @@
     background-position: center;
     padding: 60px 0;
     position: relative;
+    color: #000;
   }
   
   .contatos::before {
@@ -582,14 +583,21 @@
   
   .container02 {
     position: relative;
-    background: rgba(255, 255, 255, 0.98);
+    background: rgba(240, 240, 6, 0.2);
     padding: 28px 22px;
     border-radius: 22px;
     box-shadow: 0 14px 34px rgba(0, 0, 0, 0.35);
     max-width: 720px;
     text-align: left;
+    
+      /* Suavização da animação */
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
   }
-  
+  /* Movimento ao passar mouse */
+.container02:hover {
+  transform: translateY(8px); /* Sobe um pouco */
+  box-shadow: 0 18px 44px rgba(0, 0, 0, 0.95); /* Sombra mais forte */
+}
   .container02 h1 {
     color: var(--azul-esc);
     margin-bottom: 14px;
